<?xml version="1.0"?>
<package format="2">
  <name>tutorial_boost</name>
  <version>0.0.0</version>
  <description>The tutorial_boost package</description>

  <maintainer email="zeabus@todo.todo">zeabus</maintainer>

  <license>Boost</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
