<?xml version="1.0"?>
<package format="2">
  <name>tutorial_subscribe</name>
  <version>0.0.0</version>
  <description>The tutorial_subscribe package</description>

  <maintainer email="supasan.k@ku.th">zeabus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>tutorial_msgs</build_depend>
  <exec_depend>tutorial_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
